--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Matt Glaman",
-            "email": "nmd.matt@gmail.com"
+            "email": "matt@bluehorndigital.com"
         }
     ],
     "require": {},
